[package]
name = "crate_dep_analyzer"
version = "0.1.0"
authors = ["Trevor Bentley"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crates_io_api = { version = "0.5", path = "deps/crates_io_api" }
statistical = "1.0"
serde = "1.0"
serde_json = "1.0"
